--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hyl-2022",
   "version": "0.1.0",
-  "homepage": "https://github.com/brian-ngyn/ENSF409-Project",
-  "private": true,
+  "homepage": "https://brian-ngyn.github.io/Hack-Your-Learning-2022/",
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
