--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-webcam": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
