--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "clarifai": "^2.9.1",
+    "clarifai-nodejs-grpc": "^8.0.0",
     "firebase": "^9.6.10",
+    "http2": "^3.3.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
